<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#E6E6FA"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150dp"-->
<!--            android:background="#E6E6FA"-->
<!--            android:src="@drawable/header"-->
<!--            android:id="@+id/imageView"-->
<!--            />-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/searchHint"
            style="@style/distinctiveEditText"
            android:drawableStart="@drawable/outline_calendar_today_black_24dp"
            android:drawablePadding="8dp"
            android:id="@+id/searchText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchButton"
            android:layout_marginEnd="3dp"
            android:background="@drawable/distinctive_button"
            android:gravity="center"
            android:id="@+id/searchButton"
            />
    </LinearLayout>


    <com.bin.david.form.core.SmartTable
        android:id="@+id/daily_table"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </com.bin.david.form.core.SmartTable>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/imageExpend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#00FFFFFF"
            android:contentDescription="@string/addExpenseImage"
            android:src="@drawable/baseline_remove_black_24dp">
        </ImageButton>

        <ImageButton
            android:id="@+id/imageIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#00FFFFFF"
            android:contentDescription="@string/addIncomeImage"
            android:src="@drawable/baseline_add_black_24dp">
        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:layout_gravity="bottom"
            android:background="#00FFFFFF"
            android:contentDescription="@string/deleteView"
            android:visibility="invisible"
            android:src="@drawable/baseline_clear_black_24dp">
        </ImageButton>
    </LinearLayout>
</LinearLayout>