<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/searchYearly"
            android:hint="@string/searchYearlyHint">
        </EditText>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchYearlyButton"
            android:text="@string/searchButton">
        </Button>
    </LinearLayout>
    <com.github.mikephil.charting.charts.PieChart
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:id="@+id/pieChartIncome">
    </com.github.mikephil.charting.charts.PieChart>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChartExpense"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </com.github.mikephil.charting.charts.PieChart>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalAmountIncomePrompt"
            android:textSize="15sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textIncomeAmount"
            android:textSize="15sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalAmountExpensePrompt"
            android:textSize="15sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textExpenseAmount"
            android:textSize="15sp">
        </TextView>
    </LinearLayout>
</LinearLayout>
